# kuromi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  release-note.md
.github/workflows/: deploy.yml  pr-check.yml
config/: __init__.py  runtime_config.py  settings.py
infra/: create-ec2.sh  ec2-userdata-docker.sh  ec2-userdata.sh  iam-ec2-policy.json  setup-github-secrets.sh
infra/systemd/: kuromi.service
src/: main.py
src/agents/: base.py  derivative.py  execution.py  improver.py  market_data.py  monitor.py  notifier.py  onchain.py  performance.py  persistence.py  portfolio.py  risk.py  signal.py  strategy.py
src/backtest/: candle_merge.py  grid.py  mock_execution.py  multi.py  runner.py  unified.py
src/core/: agent_metrics.py  capital.py  equity_tracker.py  event_bus.py  orchestrator.py  state.py
src/dashboard/: app.py  frontend.py
src/exchange/: binance_client.py  onchain_client.py  orders.py  upbit_client.py  upbit_ws.py
src/indicators/: crypto.py  onchain.py  technical.py
src/storage/: db.py
src/strategies/: base.py  bollinger.py  macd_cross.py  mean_reversion.py  momentum.py  multi_factor.py  registry.py  rsi.py  stochastic.py
src/telegram/: bot.py
